# shotoku

./: Cargo.toml  LICENSE  README.md
examples/: llamacpp.jsonl
src/: lib.rs  model.rs  worker.rs
